# simd_vecs

./: Cargo.toml
src/: lib.rs  ops.rs  physics.rs  units.rs  vecs.rs
src/vecs/: mod.rs  vec1.rs  vec2.rs
